manifests/uptime-kuma/uptime-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: uptimekuma-svc
spec:
  type: ClusterIP
  selector:
    app: uptimekuma-pod
  ports:
    - name: http-uptimekuma-out
      protocol: TCP
      port: 80
      targetPort: http-uptimekuma
