manifests/uptime-kuma/uptime-ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: uptimekuma-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    # - web
    - websecure
  routes:
    - match: Host(`uptime.juicewizerd.com`)
      kind: Rule
      services:
        - name: uptimekuma-svc
          port: 80
          # sticky:
          #   cookie:
          #     name: cookie
          #     secure: true
      middlewares:
        - name: crowdsec-authelia
        - name: cors-headers
  tls:
    secretName: juicewizerd-le-com-tls
